--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="midnightblue">#1C2647</color>
     <color name="light_blue">#2E4170</color>
-    <color name="white_home">#F3F6FC</color>
+    <color name="off_white">#F3F6FC</color>
     <color name="nsei">#2D2D39</color>
     <color name="medium_blue">#283456</color>
 
