--- a/app/src/main/res/drawable/shape_unselected_circle_dark.xml
+++ b/app/src/main/res/drawable/shape_unselected_circle_dark.xml
@@ -3,9 +3,8 @@
 
     <size
         android:width="8dp"
-        android:height="8dp"
-        />
-    <solid android:color="@color/light_grey" />
+        android:height="8dp" />
+    <solid android:color="@color/white" />
 
     <corners android:radius="4dp" />
 
