--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,66 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.home.HomeFragment">
+    tools:context=".ui.fragments.home.HomeFragment"
+    style="@style/BACKGROUND_DEFAULT">
 
     <TextView
         android:id="@+id/home_fragment_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="Data do evento"
-        android:textColor="#2D2D39"
-        android:textSize="12sp"
         android:layout_margin="16dp"
         android:fontFamily="@font/segoe"
+        android:text="Data do evento"
+        style="@style/TEXT_COLOR"
+        android:textSize="12sp"
 
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/home_fragment_event_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:textColor="#2D2D39"
-        android:text="Eventos:"
-        android:textSize="16sp"
         android:fontFamily="@font/segoe"
+        android:text="Eventos:"
+        style="@style/TEXT_COLOR"
+        android:textSize="16sp"
 
+        app:layout_constraintEnd_toEndOf="@id/home_fragment_date"
         app:layout_constraintStart_toStartOf="@id/home_fragment_date"
-        app:layout_constraintTop_toBottomOf="@id/home_fragment_date"
-        app:layout_constraintEnd_toEndOf="@id/home_fragment_date"/>
+        app:layout_constraintTop_toBottomOf="@id/home_fragment_date" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/home_fragment_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="220dp"
 
-        android:background="@color/light_blue"
-        android:backgroundTint="@color/light_blue"
         android:paddingHorizontal="50dp"
-        android:paddingVertical="20dp"
+        android:paddingVertical="15dp"
 
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_fragment_event_title"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/home_fragment_event_title" />
 
-    <!--    <me.relex.circleindicator.CircleIndicator3
+    <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/home_fragment_circle_indicator"
         android:layout_width="match_parent"
         android:layout_height="48dp"
 
         android:gravity="center"
+        style="@style/CIRCLE_INDICATOR"
         app:ci_gravity="center"
-        app:ci_drawable="@drawable/selector_circle_indicator"
-        android:background="@color/light_blue"
 
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_fragment_view_pager"/>-->
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/home_fragment_view_pager" />
+
+    <include
+        android:id="@+id/home_fragment_historic_panel"
+        layout="@layout/historic_panel"
+        android:layout_width="match_parent"
+
+        android:layout_marginTop="10dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/home_fragment_circle_indicator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
