--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,24 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/BACKGROUND_2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.register.RegisterFragment">
 
-    <ImageView
+    <include
         android:id="@+id/imageView3"
-        style="@style/BANNER_LAYER_1"
-        android:layout_width="match_parent"
-
-        android:layout_height="match_parent"
-        android:importantForAccessibility="no"
-
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        layout="@layout/background_layer"/>
 
     <include
         android:id="@+id/register_fragment_register_panel"
