--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -85,7 +85,8 @@
             app:srcCompat="@drawable/item_event_grid"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:importantForAccessibility="no" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 
