--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -60,6 +60,12 @@
         <item name="android:backgroundTint">@color/black</item>
     </style>
 
+    <style name="BACKGROUND_LAYER">
+        <item name="android:background">@color/light_grey</item>
+        <item name="android:src">@drawable/banner_layer_1_dark</item>
+        <item name ="android:scaleType">fitXY</item>
+    </style>
+
     <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
     <!-- TEXT COLOR -->
     <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
@@ -136,6 +142,19 @@
         <item name="ci_drawable">@drawable/selector_circle_indicator_dark</item>
     </style>
 
+    <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
+    <!-- CARD VIEW -->
+    <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
+
+    <!-- CardView background -->
+    <style name="BACKGROUND_CARD">
+        <item name="cardBackgroundColor">@color/light_blue</item>
+        <item name="cardCornerRadius">30dp</item>
+        <item name="cardElevation">10dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
 
 
 
