--- a/app/src/main/res/layout/fragment_form_event.xml
+++ b/app/src/main/res/layout/fragment_form_event.xml
@@ -1,74 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.formEvent.FormEventFragment">
+    android:fillViewport="true"
+    style="@style/BACKGROUND_LAYER">
 
-    <ImageView
-        android:id="@+id/fragment_form_event_image"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-
-        app:srcCompat="@drawable/default_image"
-        android:contentDescription="@string/barbecue_image"
-        android:scaleType="centerCrop"
-        android:elevation="1dp"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <include layout="@layout/background_layer" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/fragment_form_event_input_layout"
-        style="@style/TEXT_INPUT_STYLE"
-        android:layout_width="0dp"
-
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginHorizontal="30dp"
-        android:hint="@string/name"
-        android:textColorHint="@color/black"
-        app:counterEnabled="true"
-        app:counterMaxLength="20"
-        app:counterTextColor="@color/off_white"
+        tools:context=".ui.fragments.formEvent.FormEventFragment">
 
-        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_form_event_image">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/fragment_form_event_edit_text"
+        <ImageView
+            android:id="@+id/fragment_form_event_image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textCapWords"
-            android:maxLength="20"
-            android:maxLines="1" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="200dp"
 
-    <TextView
-        android:id="@+id/fragment_form_event_date"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+            android:contentDescription="@string/barbecue_image"
+            android:elevation="1dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
 
-        android:foreground="?android:attr/selectableItemBackground"
-        android:theme="@android:style/ThemeOverlay.Material.Dark"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/default_image" />
 
-        android:focusable="true"
-        android:clickable="true"
-        android:layout_marginTop="18dp"
-        android:background="@drawable/shape_bordered_text"
-        android:gravity="center"
-        android:padding="14dp"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@id/fragment_form_event_input_layout"
+        <include
+            layout="@layout/background_layer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
-        app:layout_constraintStart_toStartOf="@id/fragment_form_event_input_layout"
-        app:layout_constraintTop_toBottomOf="@id/fragment_form_event_input_layout"
-        tools:text="@tools:sample/date/ddmmyy" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragment_form_event_input_layout"
+            style="@style/TEXT_INPUT_STYLE"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="48dp"
+
+            android:hint="@string/name"
+            android:textColorHint="@color/black"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:counterTextColor="@color/off_white"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_form_event_image">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragment_form_event_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="textCapWords"
+                android:maxLength="20"
+                android:maxLines="1" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragment_form_event_description_input_layout"
+            style="@style/TEXT_INPUT_STYLE"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="16dp"
+
+            android:hint="@string/description"
+            android:textColorHint="@color/black"
+            app:counterEnabled="true"
+            app:counterMaxLength="100"
+            app:counterTextColor="@color/off_white"
+
+            app:layout_constraintEnd_toEndOf="@id/fragment_form_event_input_layout"
+            app:layout_constraintStart_toStartOf="@id/fragment_form_event_input_layout"
+            app:layout_constraintTop_toBottomOf="@id/fragment_form_event_input_layout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragment_form_event_description_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:inputType="textMultiLine|textCapSentences"
+                android:lines="3"
+                android:maxLength="100"
+                android:maxLines="3" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/fragment_form_event_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="26dp"
+            android:background="@drawable/shape_bordered_text"
+            tools:text="@tools:sample/date/ddmmyy"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:padding="14dp"
+            android:textColor="@color/white"
+            android:theme="@android:style/ThemeOverlay.Material.Dark"
+            app:layout_constraintVertical_bias="0"
+
+            app:layout_constraintEnd_toEndOf="@id/fragment_form_event_input_layout"
+            app:layout_constraintStart_toStartOf="@id/fragment_form_event_input_layout"
+            app:layout_constraintTop_toBottomOf="@id/fragment_form_event_description_input_layout"
+             app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
